--- a/proposal106.2/index.html
+++ b/proposal106.2/index.html
@@ -126,8 +126,7 @@
       if (!rMarketCap || !divisor) {
         return [{ x: 0, y: 1 + maxBoost }];
       }
-      const pts = [];
-      const step = rMarketCap / 50;
+      const pts = []; const step = rMarketCap / 50;
       for (let b = 0; b <= rMarketCap; b += step) {
         const y = 1 + maxBoost * Math.exp(-b / (rMarketCap / divisor));
         pts.push({ x: b, y });
@@ -204,8 +203,7 @@
         const json = await res.json();
         const bal  = json.balances || [];
         const hasX = bal.some(b => b.asset_type === 'native');
-        const nonX = bal.filter(b=>b.asset_type!=='native')
-                        .map(b=>b.asset_code);
+        const nonX = bal.filter(b=>b.asset_type!=='native').map(b=>b.asset_code);
         if (nonX.length >= 2)         return nonX;
         if (nonX.length === 1 && hasX) return [ nonX[0], 'XLM' ];
         if (hasX)                     return ['XLM'];
@@ -223,7 +221,6 @@
       if (assets.includes('USDC')) b += 0.3;
       return b;
     }
-    // updated calcDynamic using parseNum
     function calcDynamic(bribe, maxBoost) {
       const divisor    = parseNum(document.getElementById('divisor').value);
       const rMarketCap = parseNum(document.getElementById('rMarketCap').value);
@@ -277,41 +274,63 @@
     // ---- shares, adjusted shares, rewards, totals ----
     function updateShares() {
       const rows = Array.from(document.querySelectorAll('#votesTable tbody tr'));
-      const raw  = rows.map(r => parseNum(r.cells[5].textContent));
-      const pos  = raw.map(v => (v>0 ? v : 0));
-      const sumPos        = pos.reduce((a,b)=>a+b,0) || 0;
+
+      // get raw dampened values and positive-only sums
+      const raw     = rows.map(r => parseNum(r.cells[5].textContent));
+      const pos     = raw.map(v => (v > 0 ? v : 0));
+      const sumPos  = pos.reduce((a, b) => a + b, 0);
+
+      // subtract downvoteICE total for denominator
+      const downICE = parseNum(document.getElementById('apiDownICE').textContent);
+      const denom   = Math.max(0, sumPos - downICE);
+
       let qualifiers = [];
-      rows.forEach((r,i) => {
-        const pct = sumPos>0 ? (pos[i]/sumPos)*100 : 0;
-        r.cells[6].textContent = pct.toFixed(5)+'%';
+
+      // calculate Vote Share using adjusted denominator
+      rows.forEach((r, i) => {
+        const pct = denom > 0 ? (pos[i] / denom) * 100 : 0;
+        r.cells[6].textContent = pct.toFixed(5) + '%';
         if (pct >= 0.5) qualifiers.push({ row: r, pct });
       });
-      const totalQual = qualifiers.reduce((a,b)=>a+b.pct,0) || 1;
+
+      // recalc Vote Share Adjust without downvoters
+      const totalQual = qualifiers.reduce((a, q) => a + q.pct, 0) || 1;
       qualifiers.forEach(q => {
-        const adjPct = (q.pct/totalQual)*100;
-        q.row.cells[7].textContent = adjPct.toFixed(5)+'%';
+        const adjPct = (q.pct / totalQual) * 100;
+        q.row.cells[7].textContent = adjPct.toFixed(5) + '%';
       });
+
+      // AQUA Rewards split from R_total
       let rTotal = parseNum(document.getElementById('rTotal').value);
       qualifiers.forEach(q => {
         const adjPct = parseNum(q.row.cells[7].textContent);
-        q.row.cells[8].textContent = fmt(rTotal * adjPct/100, 2);
+        q.row.cells[8].textContent = fmt((rTotal * adjPct) / 100, 2);
       });
+
       // footer totals
-      const absVotes = rows.map(r=>parseNum(r.cells[1].textContent));
-      const absDamp  = raw.map(v=>Math.abs(v));
-      const sumVotes = absVotes.reduce((a,b)=>a+b,0);
-      const sumDamp  = absDamp .reduce((a,b)=>a+b,0);
-      const sumShare = rows.reduce((a,r)=>a + parseNum(r.cells[6].textContent),0);
-      const sumAdj   = qualifiers.reduce((a,q)=>a + parseNum(q.row.cells[7].textContent),0);
-      const sumRwds  = qualifiers.reduce((a,q)=>a + parseNum(q.row.cells[8].textContent),0);
+      const sumVotes = rows
+        .map(r => parseNum(r.cells[1].textContent))
+        .reduce((a, b) => a + b, 0);
+      const sumDamp  = raw
+        .map(v => Math.abs(v))
+        .reduce((a, b) => a + b, 0);
+      const sumShare = rows
+        .reduce((a, r) => a + parseNum(r.cells[6].textContent), 0);
+      const sumAdj   = qualifiers
+        .reduce((a, q) => a + parseNum(q.row.cells[7].textContent), 0);
+      const sumRwds  = qualifiers
+        .reduce((a, q) => a + parseNum(q.row.cells[8].textContent), 0);
+
       document.getElementById('totalVotesFooterVotes').textContent   = fmt(sumVotes,2);
       document.getElementById('totalStaticFooter').textContent      = fmt(
-        rows.reduce((s,r)=>s + parseNum(r.cells[2].textContent),0),2
+        rows.reduce((s, r) => s + parseNum(r.cells[2].textContent), 0),
+        2
       );
       document.getElementById('totalDampFooter').textContent        = fmt(sumDamp,2);
-      document.getElementById('totalShareFooter').textContent       = sumShare.toFixed(5)+'%';
-      document.getElementById('totalShareAdjustFooter').textContent = sumAdj.toFixed(5)+'%';
+      document.getElementById('totalShareFooter').textContent       = sumShare.toFixed(5) + '%';
+      document.getElementById('totalShareAdjustFooter').textContent = sumAdj.toFixed(5) + '%';
       document.getElementById('totalRewardsFooter').textContent     = fmt(sumRwds,2);
+
       totalEl.textContent = `Total Votes: ${fmt(sumVotes,2)}`;
       totalEl.style.display = 'block';
     }
@@ -328,8 +347,8 @@
         (data.results || []).forEach(item => {
           (item.extra?.upvote_assets || []).forEach(a => {
             const v = parseNum(a.votes_sum);
-            if (a.asset.startsWith('AQUA:')) aquaSum += v;
-            if (a.asset.startsWith('upvoteICE:')) upICEsum += v;
+            if (a.asset.startsWith('AQUA:'))       aquaSum   += v;
+            else if (a.asset.startsWith('upvoteICE:')) upICEsum += v;
           });
           (item.extra?.downvote_assets || []).forEach(a => {
             const v = parseNum(a.votes_sum);
@@ -352,8 +371,8 @@
       updateChart();
       const mkts   = await fetchMarkets();
       const assets = await Promise.all(mkts.map(m => fetchTrustlines(m.market_key)));
-      const frag = document.createDocumentFragment();
-      mkts.forEach((m,i) => {
+      const frag   = document.createDocumentFragment();
+      mkts.forEach((m, i) => {
         const orig = parseNum(m.votes_value);
         const st   = calcStatic(assets[i]);
         frag.appendChild(createRow({
