--- a/proposal106.2/index.html
+++ b/proposal106.2/index.html
@@ -104,7 +104,7 @@
   </div>
 
   <script>
-    // ---- formatting helper ----
+    // formatting helper
     function fmt(num, dec=2) {
       return num.toLocaleString(undefined, {
         minimumFractionDigits: dec,
@@ -112,283 +112,217 @@
       });
     }
 
-    // ---- parsing helper to strip commas & % ----
+    // parsing helper
     function parseNum(str) {
-      return parseFloat(
-        String(str).replace(/,/g, '').replace('%','')
-      ) || 0;
+      return parseFloat(String(str).replace(/,/g,'').replace('%','')) || 0;
     }
 
-    // ---- Chart.js curve logic ----
+    // Chart.js setup
     const ctx = document.getElementById('curveChart').getContext('2d');
     let curveChart;
     function computeCurve(maxBoost, rMarketCap, divisor) {
-      if (!rMarketCap || !divisor) {
-        return [{ x: 0, y: 1 + maxBoost }];
-      }
-      const pts = []; const step = rMarketCap / 50;
-      for (let b = 0; b <= rMarketCap; b += step) {
-        const y = 1 + maxBoost * Math.exp(-b / (rMarketCap / divisor));
-        pts.push({ x: b, y });
+      if (!rMarketCap || !divisor) return [{ x:0, y:1+maxBoost }];
+      const pts = [], step = rMarketCap/50;
+      for (let b=0; b<=rMarketCap; b+=step) {
+        pts.push({ x:b, y:1 + maxBoost*Math.exp(-b/(rMarketCap/divisor)) });
       }
       return pts;
     }
     function updateChart() {
-      let divisor = parseNum(document.getElementById('divisor').value);
-      let rTotal  = parseNum(document.getElementById('rTotal').value);
-      let pCap    = parseNum(document.getElementById('pCap').value);
-      if (!divisor) divisor = 5;
-      if (rTotal < 0) rTotal = 0;
-      if (pCap < 0)   pCap = 0;
-      const rMarketCap = rTotal * pCap / 100;
-      document.getElementById('rMarketCap').value = fmt(rMarketCap, 2);
+      let div = parseNum(document.getElementById('divisor').value) || 5;
+      let rt  = parseNum(document.getElementById('rTotal').value);
+      let pc  = parseNum(document.getElementById('pCap').value);
+      if (rt<0) rt=0; if (pc<0) pc=0;
+      const rmc = rt*pc/100;
+      document.getElementById('rMarketCap').value = fmt(rmc,2);
 
-      const dataA = computeCurve(0.3, rMarketCap, divisor);
-      const dataB = computeCurve(0.5, rMarketCap, divisor);
+      const dA = computeCurve(0.3, rmc, div);
+      const dB = computeCurve(0.5, rmc, div);
 
       if (!curveChart) {
         curveChart = new Chart(ctx, {
-          type: 'line',
-          data: { datasets: [
-            { label: 'MaxBoost 0.3', data: dataA, borderColor: 'blue', fill: false,
-              parsing: { xAxisKey: 'x', yAxisKey: 'y' } },
-            { label: 'MaxBoost 0.5', data: dataB, borderColor: 'red', fill: false,
-              parsing: { xAxisKey: 'x', yAxisKey: 'y' } }
-          ] },
-          options: {
-            scales: {
-              x: { type: 'linear', title: { display: true, text: 'Bribe' } },
-              y: { title: { display: true, text: 'Boost' } }
-            }
-          }
+          type:'line',
+          data:{ datasets:[
+            { label:'MaxBoost 0.3', data:dA, borderColor:'blue', fill:false, parsing:{xAxisKey:'x',yAxisKey:'y'} },
+            { label:'MaxBoost 0.5', data:dB, borderColor:'red',  fill:false, parsing:{xAxisKey:'x',yAxisKey:'y'} }
+          ]},
+          options:{ scales:{ x:{ type:'linear', title:{display:true,text:'Bribe'} }, y:{ title:{display:true,text:'Boost'} } } }
         });
       } else {
-        curveChart.data.datasets[0].data = dataA;
-        curveChart.data.datasets[1].data = dataB;
+        curveChart.data.datasets[0].data = dA;
+        curveChart.data.datasets[1].data = dB;
         curveChart.update();
       }
     }
-    ['divisor','rTotal','pCap'].forEach(id =>
+    ['divisor','rTotal','pCap'].forEach(id=>
       document.getElementById(id).addEventListener('input', updateChart)
     );
 
-    // ---- loading and DOM refs ----
-    const API       = 'https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200';
-    const HORIZON   = 'https://horizon.stellar.org/accounts/';
-    let dot = 0;
-    const dotsEl     = document.getElementById('dots');
-    const loadingEl  = document.getElementById('loading');
-    const wrapperEl  = document.getElementById('tableWrapper');
-    const totalEl    = document.getElementById('totalVotes');
-    const apiBlock   = document.getElementById('apiTotalsContainer');
-    const interval   = setInterval(() => {
-      dot = (dot + 1) % 4;
-      dotsEl.textContent = '.'.repeat(dot);
-    }, 500);
+    // DOM refs & loading
+    const API     = 'https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200';
+    const HORIZON = 'https://horizon.stellar.org/accounts/';
+    let dot=0;
+    const dotsEl    = document.getElementById('dots');
+    const loadEl    = document.getElementById('loading');
+    const wrapEl    = document.getElementById('tableWrapper');
+    const totalEl   = document.getElementById('totalVotes');
+    const apiBlock  = document.getElementById('apiTotalsContainer');
+    const intv      = setInterval(()=>{
+      dot=(dot+1)%4;
+      dotsEl.textContent='.'.repeat(dot);
+    },500);
 
-    // ---- data fetching ----
-    async function fetchMarkets() {
-      let all = [], url = API;
-      while (url) {
-        const res  = await fetch(url);
-        const data = await res.json();
-        all.push(...data.results);
-        url = data.next;
+    // fetch markets & trustlines
+    async function fetchMarkets(){
+      let all=[], url=API;
+      while(url){
+        const res = await fetch(url), js = await res.json();
+        all.push(...js.results);
+        url = js.next;
       }
       return all;
     }
-    async function fetchTrustlines(key) {
-      try {
-        const res  = await fetch(HORIZON + key);
-        const json = await res.json();
-        const bal  = json.balances || [];
-        const hasX = bal.some(b => b.asset_type === 'native');
+    async function fetchTrustlines(k){
+      try{
+        const js = await (await fetch(HORIZON+k)).json();
+        const bal = js.balances||[];
+        const hasX = bal.some(b=>b.asset_type==='native');
         const nonX = bal.filter(b=>b.asset_type!=='native').map(b=>b.asset_code);
-        if (nonX.length >= 2)         return nonX;
-        if (nonX.length === 1 && hasX) return [ nonX[0], 'XLM' ];
-        if (hasX)                     return ['XLM'];
+        if(nonX.length>=2) return nonX;
+        if(nonX.length===1&&hasX) return [nonX[0],'XLM'];
+        if(hasX) return ['XLM'];
         return nonX;
-      } catch {
-        return ['XLM'];
-      }
+      }catch{return ['XLM'];}
     }
 
-    // ---- boost calculations ----
-    function calcStatic(assets) {
-      let b = 1;
-      if (assets.includes('AQUA')) b += 0.5;
-      if (assets.includes('XLM'))  b += 0.3;
-      if (assets.includes('USDC')) b += 0.3;
+    // boost calcs
+    function calcStatic(a){
+      let b=1;
+      if(a.includes('AQUA')) b+=0.5;
+      if(a.includes('XLM'))  b+=0.3;
+      if(a.includes('USDC')) b+=0.3;
       return b;
     }
-    function calcDynamic(bribe, maxBoost) {
-      const divisor    = parseNum(document.getElementById('divisor').value);
-      const rMarketCap = parseNum(document.getElementById('rMarketCap').value);
-      if (!rMarketCap || !divisor) {
-        return 1 + maxBoost;
-      }
-      return 1 + maxBoost * Math.exp(-bribe / (rMarketCap / divisor));
+    function calcDynamic(br,maxB){
+      const div = parseNum(document.getElementById('divisor').value);
+      const rmc = parseNum(document.getElementById('rMarketCap').value);
+      if(!div||!rmc) return 1+maxB;
+      return 1+maxB*Math.exp(-br/(rmc/div));
     }
 
-    // ---- row creation ----
-    function createRow(item) {
-      const tr = document.createElement('tr');
-      const base = item.original;
-      const st   = item.staticBoost;
-      const initDyn = st;
-      const initDamp = base > 0 ? base * st : base;
-      tr.innerHTML = `
+    // row builder
+    function createRow(item){
+      const tr=document.createElement('tr');
+      const base=item.original, st=item.staticBoost;
+      const initDyn=st, initDamp=base>0?base*st:base;
+      tr.innerHTML=`
         <td>${item.market}</td>
-        <td>${fmt(Math.abs(base),2)}</td>
-        <td>${base>0?fmt(base*st,2):'0.00'}</td>
+        <td>${fmt(base,2)}</td>
+        <td>${base>0?fmt(base*st,2):fmt(base,2)}</td>
         <td><input type="number" value="0" min="0"></td>
         <td>${initDyn.toFixed(5)}</td>
         <td>${fmt(initDamp,2)}</td>
         <td>0.00000%</td>
         <td>0.00000%</td>
-        <td>0.00</td>
-      `;
-      const inp     = tr.querySelector('input');
-      const dynCell = tr.cells[4];
-      const dampCell= tr.cells[5];
-
-      inp.addEventListener('input', () => {
-        const br = parseNum(inp.value);
-        let dyn;
-        if (st > 1.5) {
-          dyn = st;
-        } else if (base > 0) {
-          dyn = calcDynamic(br, st - 1);
-        } else {
-          dyn = st;
-        }
-        dynCell.textContent = dyn.toFixed(5);
-        const damp = base > 0 ? base * dyn : base;
-        dampCell.textContent = fmt(damp,2);
+        <td>0.00</td>`;
+      const inp=tr.querySelector('input'),
+            dyn=tr.cells[4], damp=tr.cells[5];
+      inp.addEventListener('input',()=>{
+        const br=parseNum(inp.value);
+        let dv;
+        if(st>1.5) dv=st;
+        else if(base>0) dv=calcDynamic(br,st-1);
+        else dv=st;
+        dyn.textContent=dv.toFixed(5);
+        const dp=base>0?base*dv:base;
+        damp.textContent=fmt(dp,2);
         updateShares();
       });
-
       return tr;
     }
 
-    // ---- shares, adjusted shares, rewards, totals ----
-    function updateShares() {
-      const rows = Array.from(document.querySelectorAll('#votesTable tbody tr'));
-
-      // get raw dampened values and positive-only sums
-      const raw     = rows.map(r => parseNum(r.cells[5].textContent));
-      const pos     = raw.map(v => (v > 0 ? v : 0));
-      const sumPos  = pos.reduce((a, b) => a + b, 0);
-
-      // subtract downvoteICE total for denominator
-      const downICE = parseNum(document.getElementById('apiDownICE').textContent);
-      const denom   = Math.max(0, sumPos - downICE);
-
-      let qualifiers = [];
-
-      // calculate Vote Share using adjusted denominator
-      rows.forEach((r, i) => {
-        const pct = denom > 0 ? (pos[i] / denom) * 100 : 0;
-        r.cells[6].textContent = pct.toFixed(5) + '%';
-        if (pct >= 0.5) qualifiers.push({ row: r, pct });
+    // share & totals
+    function updateShares(){
+      const rows=Array.from(document.querySelectorAll('#votesTable tbody tr'));
+      const raw=rows.map(r=>parseNum(r.cells[5].textContent));
+      const pos=raw.map(v=>v>0?v:0);
+      const sumPos=pos.reduce((a,b)=>a+b,0);
+      const downICE=parseNum(document.getElementById('apiDownICE').textContent);
+      const denom=Math.max(0,sumPos-downICE);
+      let quals=[];
+      rows.forEach((r,i)=>{
+        const pct=denom>0?(pos[i]/denom)*100:0;
+        r.cells[6].textContent=pct.toFixed(5)+'%';
+        if(pct>=0.5) quals.push({row:r,pct});
       });
-
-      // recalc Vote Share Adjust without downvoters
-      const totalQual = qualifiers.reduce((a, q) => a + q.pct, 0) || 1;
-      qualifiers.forEach(q => {
-        const adjPct = (q.pct / totalQual) * 100;
-        q.row.cells[7].textContent = adjPct.toFixed(5) + '%';
+      const totQ=quals.reduce((a,q)=>a+q.pct,0)||1;
+      quals.forEach(q=>{
+        q.row.cells[7].textContent=((q.pct/totQ)*100).toFixed(5)+'%';
       });
-
-      // AQUA Rewards split from R_total
-      let rTotal = parseNum(document.getElementById('rTotal').value);
-      qualifiers.forEach(q => {
-        const adjPct = parseNum(q.row.cells[7].textContent);
-        q.row.cells[8].textContent = fmt((rTotal * adjPct) / 100, 2);
+      let rt=parseNum(document.getElementById('rTotal').value);
+      quals.forEach(q=>{
+        const ap=parseNum(q.row.cells[7].textContent);
+        q.row.cells[8].textContent=fmt((rt*ap)/100,2);
       });
-
-      // footer totals
-      const sumVotes = rows
-        .map(r => parseNum(r.cells[1].textContent))
-        .reduce((a, b) => a + b, 0);
-      const sumDamp  = raw
-        .map(v => Math.abs(v))
-        .reduce((a, b) => a + b, 0);
-      const sumShare = rows
-        .reduce((a, r) => a + parseNum(r.cells[6].textContent), 0);
-      const sumAdj   = qualifiers
-        .reduce((a, q) => a + parseNum(q.row.cells[7].textContent), 0);
-      const sumRwds  = qualifiers
-        .reduce((a, q) => a + parseNum(q.row.cells[8].textContent), 0);
-
-      document.getElementById('totalVotesFooterVotes').textContent   = fmt(sumVotes,2);
-      document.getElementById('totalStaticFooter').textContent      = fmt(
-        rows.reduce((s, r) => s + parseNum(r.cells[2].textContent), 0),
-        2
-      );
-      document.getElementById('totalDampFooter').textContent        = fmt(sumDamp,2);
-      document.getElementById('totalShareFooter').textContent       = sumShare.toFixed(5) + '%';
-      document.getElementById('totalShareAdjustFooter').textContent = sumAdj.toFixed(5) + '%';
-      document.getElementById('totalRewardsFooter').textContent     = fmt(sumRwds,2);
-
-      totalEl.textContent = `Total Votes: ${fmt(sumVotes,2)}`;
-      totalEl.style.display = 'block';
+      // footer
+      const sumVotes=rows.map(r=>parseNum(r.cells[1].textContent)).reduce((a,b)=>a+b,0);
+      const sumDamp=pos.reduce((a,b)=>a+b,0);
+      const sumSH=rows.reduce((a,r)=>a+parseNum(r.cells[6].textContent),0);
+      const sumAdj=quals.reduce((a,q)=>a+parseNum(q.row.cells[7].textContent),0);
+      const sumR=quals.reduce((a,q)=>a+parseNum(q.row.cells[8].textContent),0);
+      document.getElementById('totalVotesFooterVotes').textContent=fmt(sumVotes,2);
+      document.getElementById('totalStaticFooter').textContent=fmt(
+        rows.reduce((s,r)=>s+parseNum(r.cells[2].textContent),0),2);
+      document.getElementById('totalDampFooter').textContent=fmt(sumDamp,2);
+      document.getElementById('totalShareFooter').textContent=sumSH.toFixed(5)+'%';
+      document.getElementById('totalShareAdjustFooter').textContent=sumAdj.toFixed(5)+'%';
+      document.getElementById('totalRewardsFooter').textContent=fmt(sumR,2);
+      totalEl.textContent=`Total Votes: ${fmt(sumVotes,2)}`;
+      totalEl.style.display='block';
     }
 
-    // ---- API Vote Totals fetch ----
-    async function fetchApiTotals() {
-      let aquaSum    = 0;
-      let upICEsum   = 0;
-      let downICEsum = 0;
-      let url = API;
-      while (url) {
-        const res  = await fetch(url);
-        const data = await res.json();
-        (data.results || []).forEach(item => {
-          (item.extra?.upvote_assets || []).forEach(a => {
-            const v = parseNum(a.votes_sum);
-            if (a.asset.startsWith('AQUA:'))       aquaSum   += v;
-            else if (a.asset.startsWith('upvoteICE:')) upICEsum += v;
+    // API totals fetch
+    async function fetchApiTotals(){
+      let a=0,u=0,d=0, url=API;
+      while(url){
+        const js=await(await fetch(url)).json();
+        (js.results||[]).forEach(item=>{
+          (item.extra?.upvote_assets||[]).forEach(x=>{
+            const v=parseNum(x.votes_sum);
+            if(x.asset.startsWith('AQUA:')) a+=v;
+            if(x.asset.startsWith('upvoteICE:')) u+=v;
           });
-          (item.extra?.downvote_assets || []).forEach(a => {
-            const v = parseNum(a.votes_sum);
-            if (a.asset.startsWith('downvoteICE:')) downICEsum += v;
+          (item.extra?.downvote_assets||[]).forEach(x=>{
+            const v=parseNum(x.votes_sum);
+            if(x.asset.startsWith('downvoteICE:')) d+=v;
           });
         });
-        url = data.next;
+        url=js.next;
       }
-      document.getElementById('apiAqua').textContent    = fmt(aquaSum,2);
-      document.getElementById('apiUpICE').textContent   = fmt(upICEsum,2);
-      document.getElementById('apiDownICE').textContent = fmt(downICEsum,2);
-      document.getElementById('apiTotal').textContent   = fmt(
-        aquaSum + upICEsum + downICEsum,2
-      );
-      apiBlock.style.display = 'block';
+      document.getElementById('apiAqua').textContent=fmt(a,2);
+      document.getElementById('apiUpICE').textContent=fmt(u,2);
+      document.getElementById('apiDownICE').textContent=fmt(d,2);
+      document.getElementById('apiTotal').textContent=fmt(a+u+d,2);
+      apiBlock.style.display='block';
     }
 
-    // ---- init everything ----
-    async function init() {
+    // init
+    async function init(){
       updateChart();
-      const mkts   = await fetchMarkets();
-      const assets = await Promise.all(mkts.map(m => fetchTrustlines(m.market_key)));
-      const frag   = document.createDocumentFragment();
-      mkts.forEach((m, i) => {
-        const orig = parseNum(m.votes_value);
-        const st   = calcStatic(assets[i]);
-        frag.appendChild(createRow({
-          market: assets[i].join(' / '),
-          original: orig,
-          staticBoost: st
-        }));
+      const mkts=await fetchMarkets();
+      const ats=await Promise.all(mkts.map(m=>fetchTrustlines(m.market_key)));
+      const frag=document.createDocumentFragment();
+      mkts.forEach((m,i)=>{
+        const o=parseNum(m.votes_value), s=calcStatic(ats[i]);
+        frag.appendChild(createRow({market:ats[i].join(' / '),original:o,staticBoost:s}));
       });
       document.querySelector('#votesTable tbody').appendChild(frag);
       updateShares();
-      clearInterval(interval);
-      loadingEl.style.display = 'none';
-      wrapperEl.style.display = 'block';
+      clearInterval(intv);
+      loadEl.style.display='none';
+      wrapEl.style.display='block';
       await fetchApiTotals();
     }
-
     init();
   </script>
 </body>
